fix horizontal scroll issue

--- a/src/components/mainPage/MainPage.css
+++ b/src/components/mainPage/MainPage.css
@@ -92,7 +92,7 @@
 .section-header-text{
     text-align: left;
     position: relative;
-    left: 30vh;
+    margin-left: 25vh;
     top: -5vh;
     color: black;
 }
